--- a/src/components/virtual-gamepad-controls.css
+++ b/src/components/virtual-gamepad-controls.css
@@ -19,10 +19,14 @@
   height: 0;
   left: 0;
   right: 0;
-  bottom: 10vh;
+  bottom: 20vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
+
+  @media (orientation: portrait) {
+    display: none;
+  }
 }
 
 :local(.mockJoystick) {
